--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.0",
     "scripts": {
         "dev": "vite",
+        "dev-server": "node server/server.js",
         "build": "vite build",
         "serve": "vite preview"
     },
