--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.21.1",
         "bootstrap": "^5.0.0",
         "dayjs": "^1.10.4",
+        "discord.js": "^12.5.3",
         "express": "^4.17.1",
         "form-data": "^4.0.0",
         "jsonwebtoken": "^8.5.1",
