the docker image to DO is not working at all, try git method

--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -2,9 +2,10 @@ spec:
   name: uptime-kuma
   services:
     - name: server
-      image:
-        registry_type: DOCKER_HUB
-        registry: docker.io
-        repository: louislam/uptime-kuma
+      git:
+        repo_clone_url: https://github.com/louislam/uptime-kuma
+        branch: master
       http_port: 3001
+      build_command: npm run setup
+      run_command: npm run start-server
 
