--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
         "setup": "git checkout 1.0.0 && npm install && npm run build"
     },
     "dependencies": {
-        "@popperjs/core": "^2.9.2",
-        "axios": "^0.21.1",
-        "bootstrap": "^5.0.0",
-        "dayjs": "^1.10.4",
-        "discord.js": "^12.5.3",
-        "express": "^4.17.1",
-        "form-data": "^4.0.0",
-        "jsonwebtoken": "^8.5.1",
-        "nodemailer": "^6.6.2",
-        "password-hash": "^1.2.2",
+        "@popperjs/core": "2.9.2",
+        "axios": "0.21.1",
+        "bootstrap": "5.0.2",
+        "dayjs": "1.10.6",
+        "discord.js": "12.5.3",
+        "express": "4.17.1",
+        "form-data": "4.0.0",
+        "jsonwebtoken": "8.5.1",
+        "nodemailer": "6.6.2",
+        "password-hash": "1.2.2",
         "redbean-node": "0.0.20",
-        "socket.io": "^4.0.2",
-        "socket.io-client": "^4.1.2",
-        "tcp-ping": "^0.1.1",
-        "vue": "^3.0.5",
-        "vue-confirm-dialog": "^1.0.2",
-        "vue-router": "^4.0.10",
-        "vue-toastification": "^2.0.0-rc.1"
+        "socket.io": "4.1.3",
+        "socket.io-client": "4.1.3",
+        "tcp-ping": "0.1.1",
+        "vue": "3.0.5",
+        "vue-confirm-dialog": "1.0.2",
+        "vue-router": "4.0.10",
+        "vue-toastification": "2.0.0-rc.1"
     },
     "devDependencies": {
-        "@vitejs/plugin-legacy": "^1.4.3",
-        "@vitejs/plugin-vue": "^1.2.3",
-        "@vue/compiler-sfc": "^3.0.5",
-        "core-js": "^3.15.2",
-        "sass": "^1.35.1",
-        "vite": "^2.3.7"
+        "@vitejs/plugin-legacy": "1.4.3",
+        "@vitejs/plugin-vue": "1.2.4",
+        "@vue/compiler-sfc": "3.1.4",
+        "core-js": "3.15.2",
+        "sass": "1.35.2",
+        "vite": "2.4.1"
     }
 }
