--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "name": "uptime-kuma",
-    "version": "1.0.0",
     "scripts": {
         "dev": "vite --host",
         "start-server": "node server/server.js",
@@ -12,6 +11,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.9.2",
+        "args-parser": "^1.3.0",
         "axios": "^0.21.1",
         "bootstrap": "^5.0.0",
         "dayjs": "^1.10.4",
