--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "vite build",
         "vite-preview-dist": "vite preview --host",
         "build-docker": "docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t louislam/uptime-kuma -t louislam/uptime-kuma:1 -t louislam/uptime-kuma:1.0.1 . --push",
+        "build-docker-nightly": "docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t louislam/uptime-kuma:nightly . --push",
         "setup": "git checkout 1.0.1 && npm install && npm run build"
     },
     "dependencies": {
@@ -23,6 +24,7 @@
         "redbean-node": "0.0.20",
         "socket.io": "^4.0.2",
         "socket.io-client": "^4.1.2",
+        "sqlite3": "^5.0.0",
         "tcp-ping": "^0.1.1",
         "vue": "^3.0.5",
         "vue-confirm-dialog": "^1.0.2",
