⚡volta: pin node version 16.4.2

--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
         "core-js": "3.15.2",
         "sass": "1.35.2",
         "vite": "2.4.2"
+    },
+    "volta": {
+        "node": "16.4.2"
     }
 }
