--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "uptime-kuma",
+    "version": "1.0.1",
     "scripts": {
         "dev": "vite --host",
         "start-server": "node server/server.js",
@@ -8,12 +9,14 @@
         "vite-preview-dist": "vite preview --host",
         "build-docker": "docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t louislam/uptime-kuma -t louislam/uptime-kuma:1 -t louislam/uptime-kuma:1.0.1 . --push",
         "build-docker-nightly": "docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t louislam/uptime-kuma:nightly . --push",
-        "setup": "git checkout 1.0.1 && npm install && npm run build"
+        "setup": "git checkout 1.0.1 && npm install && npm run build",
+        "version-global-replace": ""
     },
     "dependencies": {
         "@popperjs/core": "^2.9.2",
         "args-parser": "^1.3.0",
         "axios": "^0.21.1",
+        "bcrypt": "^5.0.1",
         "bootstrap": "^5.0.0",
         "dayjs": "^1.10.4",
         "express": "^4.17.1",
