--- a/.github/workflows/docker-image-nightly.yml
+++ b/.github/workflows/docker-image-nightly.yml
@@ -7,17 +7,13 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-    -
-        name: Checkout
-        uses: actions/checkout@v2
-    -
-      name: Set up QEMU
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
-    -
-      name: Set up Docker Buildx
+    - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-    -
-      name: Build and push dockerhub
+    - name: Build and push dockerhub
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
         image: philippdormann/uptime
@@ -25,8 +21,7 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    -
-      name: Build and push ghcr
+    - name: Build and push ghcr
       uses: craftech-io/package-action@v3.1.0
       with:
         access_token: ${{ secrets.GHCR_TOKEN }}
