add apprise support

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
         "bootstrap": "^5.0.0",
+        "command-exists": "^1.2.9",
         "dayjs": "^1.10.4",
         "express": "^4.17.1",
         "form-data": "^4.0.0",
