--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "args-parser": "^1.3.0",
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
+        "bcryptjs": "^2.4.3",
         "bootstrap": "^5.0.2",
         "command-exists": "^1.2.9",
         "dayjs": "^1.10.6",
@@ -31,8 +32,10 @@
         "form-data": "^4.0.0",
         "http-graceful-shutdown": "^3.1.2",
         "jsonwebtoken": "^8.5.1",
+        "node-gyp": "^3.8.0",
         "nodemailer": "^6.6.3",
         "password-hash": "^1.2.2",
+        "prom-client": "^13.1.0",
         "redbean-node": "0.0.20",
         "socket.io": "^4.1.3",
         "socket.io-client": "^4.1.3",
