--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
         "mark-as-nightly": "node extra/mark-as-nightly.js"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.35",
+        "@fortawesome/free-regular-svg-icons": "^5.15.3",
+        "@fortawesome/free-solid-svg-icons": "^5.15.3",
+        "@fortawesome/vue-fontawesome": "^3.0.0-4",
         "@popperjs/core": "^2.9.2",
         "args-parser": "^1.3.0",
         "axios": "^0.21.1",
