set the port by env.PORT, specific node version in package.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
         "type": "git",
         "url": "https://github.com/louislam/uptime-kuma.git"
     },
+    "engines": {
+        "node": ">=14"
+    },
     "scripts": {
         "dev": "vite --host",
         "start": "npm run start-server",
