--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "url": "https://github.com/louislam/uptime-kuma.git"
     },
     "engines": {
-        "node": ">=14"
+        "node": "14.*"
     },
     "scripts": {
         "dev": "vite --host",
