--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
         "vue-toastification": "^2.0.0-rc.1"
     },
     "devDependencies": {
+        "@babel/eslint-parser": "^7.13.10",
         "@types/bootstrap": "^5.0.17",
         "@vitejs/plugin-legacy": "^1.5.0",
         "@vitejs/plugin-vue": "^1.3.0",
         "@vue/compiler-sfc": "^3.1.5",
-        "babel-eslint": "^10.1.0",
         "core-js": "^3.15.2",
         "eslint": "^7.31.0",
         "eslint-plugin-vue": "^7.14.0",
