--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -2,7 +2,7 @@ version: "3.4"
 
 services:
     uptimekuma:
-        image: uptimekuma
+        image: philippdormann/uptime
         build: .
         environment:
             NODE_ENV: development
