--- a/.dockerignore
+++ b/.dockerignore
@@ -18,6 +18,8 @@ README.md
 package-lock.json
 yarn.lock
 app.json
+CODE_OF_CONDUCT.md
+CONTRIBUTING.md
 
 ### .gitignore content (commented rules are duplicated)
 
