--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "build-docker-nightly": "docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t louislam/uptime-kuma:nightly --target nightly . --push",
         "build-docker-nightly-amd64": "docker buildx build --platform linux/amd64 -t louislam/uptime-kuma:nightly-amd64 --target nightly . --push",
         "setup": "git checkout 1.0.9 && npm install && npm run build",
-        "version-global-replace": "node extra/version-global-replace.js",
+        "update-version": "node extra/update-version.js",
         "mark-as-nightly": "node extra/mark-as-nightly.js"
     },
     "dependencies": {
