--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "scripts": {
         "dev": "vite --host",
+        "release": "release-it",
         "start": "npm run start-server",
         "start-server": "node server/server.js",
         "update": "",
@@ -61,14 +62,34 @@
         "@vitejs/plugin-legacy": "^1.5.0",
         "@vitejs/plugin-vue": "^1.3.0",
         "@vue/compiler-sfc": "^3.1.5",
+        "auto-changelog": "^2.3.0",
         "core-js": "^3.15.2",
         "eslint": "^7.31.0",
         "eslint-plugin-vue": "^7.14.0",
+        "release-it": "^14.10.1",
         "sass": "^1.36.0",
         "stylelint": "^13.13.1",
         "stylelint-config-recommended": "^5.0.0",
         "stylelint-config-standard": "^22.0.0",
         "typescript": "^4.3.5",
         "vite": "^2.4.4"
+    },
+    "release-it": {
+        "git": {
+            "commit": true,
+            "requireUpstream": false,
+            "requireCleanWorkingDir": false,
+            "commitMessage": "🚀RELEASE v${version}",
+            "push": false,
+            "tag": true,
+            "tagName": "v${version}",
+            "tagAnnotation": "v${version}"
+        },
+        "npm": {
+            "publish": false
+        },
+        "hooks": {
+            "after:bump": "auto-changelog --commit-limit false -p -u --hide-credit && git add CHANGELOG.md"
+        }
     }
 }
