update reviewdog, add vue,ts ext

--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -9,3 +9,4 @@ jobs:
       - uses: reviewdog/action-eslint@v1
         with:
           reporter: github-pr-review
+          eslint_flags: --ext .js,.ts,.vue .
