--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
         "@fortawesome/free-regular-svg-icons": "^5.15.4",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/vue-fontawesome": "^3.0.0-4",
+        "@louislam/sqlite3": "^5.0.3",
         "@popperjs/core": "^2.9.3",
         "args-parser": "^1.3.0",
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
         "bootstrap": "^5.1.0",
+        "chart.js": "^3.5.0",
+        "chartjs-adapter-dayjs": "^1.0.0",
         "command-exists": "^1.2.9",
         "dayjs": "^1.10.6",
         "express": "^4.17.1",
@@ -50,10 +53,10 @@
         "redbean-node": "0.0.21",
         "socket.io": "^4.1.3",
         "socket.io-client": "^4.1.3",
-        "@louislam/sqlite3": "^5.0.3",
         "tcp-ping": "^0.1.1",
         "v-pagination-3": "^0.1.6",
         "vue": "^3.2.1",
+        "vue-chart-3": "^0.5.7",
         "vue-confirm-dialog": "^1.0.2",
         "vue-multiselect": "^3.0.0-alpha.2",
         "vue-router": "^4.0.10",
