--- a/kubernetes/uptime-kuma/service.yml
+++ b/kubernetes/uptime-kuma/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:  
-  name: uptime-kuma
+  name: service
 spec:
   selector:    
     component: uptime-kuma
