--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "vue": "^3.2.2",
         "vue-chart-3": "^0.5.7",
         "vue-confirm-dialog": "^1.0.2",
+        "vue-i18n": "^9.1.7",
         "vue-multiselect": "^3.0.0-alpha.2",
         "vue-router": "^4.0.11",
         "vue-toastification": "^2.0.0-rc.1"
