--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,7 @@
 {
-  "extends": "stylelint-config-recommended"
+    "extends": "stylelint-config-standard",
+    "rules": {
+        "indentation": 4,
+        "no-descending-specificity": null
+    }
 }
