run stylelint for the project

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,6 +2,9 @@
     "extends": "stylelint-config-standard",
     "rules": {
         "indentation": 4,
-        "no-descending-specificity": null
+        "no-descending-specificity": null,
+        "selector-list-comma-newline-after": null,
+        "declaration-empty-line-before": null,
+        "no-duplicate-selectors": null
     }
 }
