--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "build-docker": "docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t louislam/uptime-kuma -t louislam/uptime-kuma:1 -t louislam/uptime-kuma:1.3.2 --target release . --push",
         "build-docker-nightly": "docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t louislam/uptime-kuma:nightly --target nightly . --push",
         "build-docker-nightly-amd64": "docker buildx build --platform linux/amd64 -t louislam/uptime-kuma:nightly-amd64 --target nightly . --push --progress plain",
-        "setup": "git checkout 1.3.2 && npm install && npm run build",
+        "setup": "git checkout 1.3.2 && npm install && npm run build && npm prune",
         "update-version": "node extra/update-version.js",
         "mark-as-nightly": "node extra/mark-as-nightly.js",
         "reset-password": "node extra/reset-password.js",
@@ -39,11 +39,11 @@
         "@fortawesome/free-regular-svg-icons": "^5.15.4",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/vue-fontawesome": "^3.0.0-4",
+        "@louislam/better-sqlite3-with-prebuilds": "^7.4.3",
         "@popperjs/core": "^2.9.3",
         "args-parser": "^1.3.0",
         "axios": "^0.21.1",
-        "bcrypt": "^5.0.1",
-        "better-sqlite3": "^7.4.3",
+        "bcryptjs": "^2.4.3",
         "bootstrap": "^5.1.0",
         "chart.js": "^3.5.0",
         "chartjs-adapter-dayjs": "^1.0.0",
@@ -59,7 +59,7 @@
         "password-hash": "^1.2.2",
         "prom-client": "^13.2.0",
         "prometheus-api-metrics": "^3.2.0",
-        "redbean-node": "0.1.1",
+        "redbean-node": "0.1.2",
         "socket.io": "^4.1.3",
         "socket.io-client": "^4.1.3",
         "tcp-ping": "^0.1.1",
