--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "build-docker": "docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t louislam/uptime-kuma -t louislam/uptime-kuma:1 -t louislam/uptime-kuma:1.3.2 --target release . --push",
         "build-docker-nightly": "docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t louislam/uptime-kuma:nightly --target nightly . --push",
         "build-docker-nightly-amd64": "docker buildx build --platform linux/amd64 -t louislam/uptime-kuma:nightly-amd64 --target nightly . --push --progress plain",
-        "setup": "git checkout 1.3.2 && npm install && npm run build && npm prune",
+        "setup": "git checkout 1.3.2 && npm install --legacy-peer-deps && npm run build && npm prune",
         "update-version": "node extra/update-version.js",
         "mark-as-nightly": "node extra/mark-as-nightly.js",
         "reset-password": "node extra/reset-password.js",
@@ -46,7 +46,7 @@
         "axios": "^0.21.1",
         "bcryptjs": "^2.4.3",
         "bootstrap": "^5.1.0",
-        "chart.js": "^3.5.0",
+        "chart.js": "^3.5.1",
         "chartjs-adapter-dayjs": "^1.0.0",
         "command-exists": "^1.2.9",
         "compare-versions": "^3.6.0",
