--- a/dockerfile-debian
+++ b/dockerfile-debian
@@ -1,9 +1,5 @@
 FROM node:14-bullseye-slim AS release
 
-WORKDIR /app
-COPY . .
-
-# install dependencies and apprise
 RUN apt update && \
     apt --yes --no-install-recommends install python3 python3-pip iputils-ping git && \
     ln -s /usr/bin/python3 /usr/bin/python && \
@@ -11,10 +7,12 @@ RUN apt update && \
     rm -rf /root/.cache && \
     apt clean
     
-# sqlite install here, so that it can caches the arm prebuilt
+# split the sqlite install here, so that it can caches the arm prebuilt
 RUN npm install mapbox/node-sqlite3#593c9d
 
-# Install app
+# Install uptime-kuma
+WORKDIR /app
+COPY . .
 RUN npm install --legacy-peer-deps && npm run build && npm prune
 
 EXPOSE 3001
@@ -22,6 +20,5 @@ VOLUME ["/app/data"]
 HEALTHCHECK --interval=60s --timeout=30s --start-period=300s CMD node extra/healthcheck.js
 CMD ["node", "server/server.js"]
 
-# Release
 FROM release AS nightly
 RUN npm run mark-as-nightly
