--- a/.dockerignore
+++ b/.dockerignore
@@ -20,6 +20,11 @@ yarn.lock
 app.json
 CODE_OF_CONDUCT.md
 CONTRIBUTING.md
+CNAME
+install.sh
+SECURITY.md
+tsconfig.json
+
 
 ### .gitignore content (commented rules are duplicated)
 
