Added simple TOTP Two Factor Authentication

--- a/package.json
+++ b/package.json
@@ -56,20 +56,24 @@
         "http-graceful-shutdown": "^3.1.4",
         "jsonwebtoken": "^8.5.1",
         "nodemailer": "^6.6.3",
+        "notp": "^2.0.3",
         "password-hash": "^1.2.2",
         "prom-client": "^13.2.0",
         "prometheus-api-metrics": "^3.2.0",
+        "qrcode": "^1.4.4",
         "redbean-node": "0.1.2",
         "socket.io": "^4.2.0",
         "socket.io-client": "^4.2.0",
         "sqlite3": "github:mapbox/node-sqlite3#593c9d",
         "tcp-ping": "^0.1.1",
+        "thirty-two": "^1.0.2",
         "v-pagination-3": "^0.1.6",
         "vue": "^3.2.8",
         "vue-chart-3": "^0.5.7",
         "vue-confirm-dialog": "^1.0.2",
         "vue-i18n": "^9.1.7",
         "vue-multiselect": "^3.0.0-alpha.2",
+        "vue-qrcode": "^1.0.0",
         "vue-router": "^4.0.11",
         "vue-toastification": "^2.0.0-rc.1"
     },
