--- a/dockerfile-alpine
+++ b/dockerfile-alpine
@@ -1,5 +1,5 @@
 # DON'T UPDATE TO alpine3.13, 1.14, see #41.
-FROM node:14-alpine3.12 AS release
+FROM node:14-alpine3.12 AS build
 WORKDIR /app
 
 # split the sqlite install here, so that it can caches the arm prebuilt
@@ -9,13 +9,20 @@ RUN apk add --no-cache --virtual .build-deps make g++ python3 python3-dev git &&
             apk del .build-deps && \
             rm -f /usr/bin/python
 
+COPY . .
+RUN npm install --legacy-peer-deps && npm run build && npm prune --production
+
+
+FROM node:14-alpine3.12 AS release
+WORKDIR /app
+
 # Install apprise
-RUN apk add --no-cache python3 py3-cryptography py3-pip py3-six py3-yaml py3-click py3-markdown py3-requests py3-requests-oauthlib
-RUN pip3 --no-cache-dir install apprise && \
+RUN apk add --no-cache python3 py3-cryptography py3-pip py3-six py3-yaml py3-click py3-markdown py3-requests py3-requests-oauthlib && \
+            pip3 --no-cache-dir install apprise && \
             rm -rf /root/.cache
 
-COPY . .
-RUN npm install --legacy-peer-deps && npm run build && npm prune
+# Copy app files from build layer
+COPY  --from=build /app /app
 
 EXPOSE 3001
 VOLUME ["/app/data"]
