add npm install script for npm7

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "node": "14.*"
     },
     "scripts": {
+        "install-legacy-peer-deps": "npm install --legacy-peer-deps",
+        "update-legacy-peer-deps": "npm update --legacy-peer-deps",
         "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
         "lint:style": "stylelint \"**/*.{vue,css,scss}\" --ignore-path .gitignore",
         "lint": "npm run lint:js && npm run lint:style",
