use "next" tag to keep vue3 up-to-update

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
         "thirty-two": "^1.0.2",
         "timezones-list": "^3.0.1",
         "v-pagination-3": "^0.1.6",
-        "vue": "^3.2.8",
+        "vue": "next",
         "vue-chart-3": "^0.5.8",
         "vue-confirm-dialog": "^1.0.2",
         "vue-contenteditable": "^3.0.4",
@@ -93,7 +93,7 @@
         "dns2": "^2.0.1",
         "eslint": "^7.32.0",
         "eslint-plugin-vue": "^7.17.0",
-        "sass": "^1.39.2",
+        "sass": "^1.41.0",
         "stylelint": "^13.13.1",
         "stylelint-config-standard": "^22.0.0",
         "typescript": "^4.4.3",
