--- a/dockerfile-alpine
+++ b/dockerfile-alpine
@@ -17,7 +17,7 @@ FROM node:14-alpine3.12 AS release
 WORKDIR /app
 
 # Install apprise
-RUN apk add --no-cache python3 py3-cryptography py3-pip py3-six py3-yaml py3-click py3-markdown py3-requests py3-requests-oauthlib && \
+RUN apk add --no-cache python3 py3-cryptography py3-pip py3-six py3-yaml py3-click py3-markdown py3-requests py3-requests-oauthlib dumb-init && \
             pip3 --no-cache-dir install apprise && \
             rm -rf /root/.cache
 
@@ -27,7 +27,7 @@ COPY --from=build /app /app
 EXPOSE 3001
 VOLUME ["/app/data"]
 HEALTHCHECK --interval=60s --timeout=30s --start-period=180s --retries=5 CMD node extra/healthcheck.js
-CMD ["node", "server/server.js"]
+CMD ["/usr/bin/dumb-init", "node", "server/server.js"]
 
 FROM release AS nightly
 RUN npm run mark-as-nightly
