--- a/dockerfile-alpine
+++ b/dockerfile-alpine
@@ -10,6 +10,19 @@ RUN npm install --legacy-peer-deps && \
 
 
 FROM node:14-alpine3.12 AS release
+
+ARG BUILD_DATE
+
+LABEL org.opencontainers.image.authors='Louis Lam' \
+      org.opencontainers.image.url='https://uptime.kuma.pet' \
+      org.opencontainers.image.documentation='https://github.com/louislam/uptime-kuma/wiki' \
+      org.opencontainers.image.source='https://github.com/louislam/uptime-kuma.git' \
+      org.opencontainers.image.vendor='Louis Lam' \
+      org.opencontainers.image.licenses='MIT License' \
+      org.opencontainers.image.title="Uptime Kuma" \
+      org.opencontainers.image.description="Self-hosted uptime monitoring tool with notifications" \
+      org.opencontainers.image.created=$BUILD_DATE
+
 WORKDIR /app
 
 # Install apprise, iputils for non-root ping, setpriv
