--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@fortawesome/free-regular-svg-icons": "^5.15.4",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/vue-fontawesome": "^3.0.0-4",
+        "@louislam/sqlite3": "^5.0.5",
         "@popperjs/core": "^2.10.1",
         "args-parser": "^1.3.0",
         "axios": "^0.21.4",
@@ -68,7 +69,7 @@
         "redbean-node": "0.1.2",
         "socket.io": "^4.2.0",
         "socket.io-client": "^4.2.0",
-        "sqlite3": "github:mapbox/node-sqlite3#593c9d",
+
         "tcp-ping": "^0.1.1",
         "timezones-list": "^3.0.1",
         "thirty-two": "^1.0.2",
