`removeComments` to false

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
             "es2020",
             "DOM",
         ],
-        "removeComments": true,
+        "removeComments": false,
         "preserveConstEnums": true,
         "sourceMap": false,
         "strict": true
