--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "node": "14.*"
     },
     "scripts": {
-        "install-legacy-peer-deps": "npm install --legacy-peer-deps",
-        "update-legacy-peer-deps": "npm update --legacy-peer-deps",
+        "install-legacy": "npm install --legacy-peer-deps",
+        "update-legacy": "npm update --legacy-peer-deps",
         "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
         "lint:style": "stylelint \"**/*.{vue,css,scss}\" --ignore-path .gitignore",
         "lint": "npm run lint:js && npm run lint:style",
@@ -70,7 +70,6 @@
         "redbean-node": "0.1.2",
         "socket.io": "^4.2.0",
         "socket.io-client": "^4.2.0",
-
         "tcp-ping": "^0.1.1",
         "timezones-list": "^3.0.1",
         "thirty-two": "^1.0.2",
